# DronecodeSDK

./: CMakeLists.txt
backend/: CMakeLists.txt
core/: CMakeLists.txt
example/geofence_inclusion/: geofence_inclusion.cpp
integration_tests/: CMakeLists.txt
plugins/camera/: CMakeLists.txt
plugins/telemetry/: telemetry_impl.cpp
src/plugins/geofence/: geofence_impl.cpp  geofence_impl.h
src/plugins/geofence/include/plugins/geofence/: geofence.h
